# fonts-khottabun

./: AUTHORS  ChangeLog  Makefile.am  README  configure.ac
branches/gsub_precomp/: COPYING  ChangeLog
branches/gsub_precomp/fonts/: Khottabun.sfd  Makefile.am
branches/gsub_rules/: ChangeLog
branches/gsub_rules/fonts/: Khottabun.sfd
fonts/: Khottabun.sfd  Makefile.am  Viravong.sfd
scripts/: Makefile.am
trunk/: ChangeLog  configure.ac
trunk/fonts/: Khottabun.sfd  Makefile.am
trunk/scripts/: Makefile.am
